From v1 to v1.1:
==========================
- Players are not allowed to superball unless cheats are explicitly on.
- If the boost ball is stopped, it now plays a fizzle sound effect.
- Spectating and rejoining no longer breaks missile firing.
- No longer does ball-to-body impact have to wait for time to keep flowing.
- IDKFA now gives raw energy armor.
- Improved ALTHUD support by adding health icons and new STTNUM numbers.
- There is now "Press Y to Accept" on the difficulty description text.
- Tanks and weapons can no longer be crushed by, well, crushers.
- Raw Energy Deposit now has a corrected pickup message.
- metroid_cl_doomhealth was not being properly archived. This has been fixed.



From alpha-1.777b to v1:
==========================
GAMEPLAY:
- Metroid: Dreadnought is now playable in ZDoom instead of just Zandronum!
- The Morph Ball no longer allows the player to, well, morph when the flag is held.
- Speed Booster has a much longer delay after stopping before restarting.
- Plasma Combo does slightly more damage.
- Long Combo speeds up by 10% every tic and has double the explosive radius.
- Plasma and Ice Uncharged and Charged have had their radius and height slightly reduced.
- Wall jump checks no longer get hung-up on lines that block monsters.
- After Boost Balling in mid-air, it is no longer possible to boost ball again until you have hit the ground.
- The Power Bomb's damage arc has been reversed--instead of dealing most of its damage in the center and weakening as it spreads out, it deals most of its damage the farther out it spreads. Due to the sheer amount of actors clustered up in the center, this is barely a noticable damage nerf for the Power Bomb. All it means is that one-shotting Cybers is a bit more difficult, and that enemies two feet out no longer get tickled.
- The Missiles' rate of fire has been shortened by eight tics.
- The Speed Booster now replaces the Partial Invisibility sphere rather than the Radsuit.